--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <meta name="description" content="Escuela de enseñanza de instrumentos musicales">
   
   <!-- PRELOAD IMÁGENES -->
-  <link rel="preload" href="assets/img/index/top1.webp" as="image">
-  <link rel="preload" href="assets/img/index/top2.webp" as="image">
-  <link rel="preload" href="assets/img/index/top3.webp" as="image">
+  <link rel="preload" href="assets/img/top-section/top1.webp" as="image">
+  <link rel="preload" href="assets/img/top-section/top2.webp" as="image">
+  <link rel="preload" href="assets/img/top-section/top3.webp" as="image">
 
   <!-- FIN METADATOS -->
 </head>
