--- a/index.html
+++ b/index.html
@@ -258,8 +258,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <!-- SCRIPT A TOOGLE -->
+  <!-- SCRIPTS JS -->
   <script src="assets/js/toogle.js"></script>
+  <script src="assets/js/cookies.js"></script>
   <!-- FIN BODY -->
 </body>
 
