--- a/pages/canto.html
+++ b/pages/canto.html
@@ -80,10 +80,10 @@
             <img src="../assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200px" height="800px">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" loading="lazy" width="1200px" height="800px">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" loading="lazy" width="1200px" height="800px">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -126,7 +126,7 @@
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
           </p>
           <div class="imagen3">
-            <img src="../assets/img/canto/3.webp" alt="cantante global" width="501px" height="500px">
+            <img src="../assets/img/canto/3.webp" alt="cantante global" loading="lazy" width="501px" height="500px">
           </div>
         </section>
       </div>
@@ -139,7 +139,7 @@
             Te estamos esperando.<br><em>Toma tu primera clase.</em>
           </h3>
           <div class="imagen3">
-          <img src="../assets/img/profesores/s2.webp" alt="profesora de canto" width="432px">
+          <img src="../assets/img/profesores/s2.webp" alt="profesora de canto" loading="lazy" width="432px">
           </div>
         </section>
       </div>
