--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   
   <!-- PRELOAD IMÁGENES -->
   <link rel="preload" href="assets/img/top-section/top1.webp" as="image">
+  <link rel="preload" href="assets/img/top-section/top2.webp" as="image">
+  <link rel="preload" href="assets/img/top-section/top3.webp" as="image">
 
   <!-- FIN METADATOS -->
 </head>
@@ -79,10 +81,10 @@
               <img src="assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200px" height="800px">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" loading="lazy" width="1200px" height="800px">
+              <img src="assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200px" height="800px">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" loading="lazy" width="1200px" height="800px">
+              <img src="assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200px" height="800px">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
