--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta name="description" content="Escuela de enseñanza de instrumentos musicales">
   
   <!-- PRELOAD IMÁGENES -->
-  <link rel="preload" href="assets/img/top-section/top1.webp" as="image">
+  <!-- <link rel="preload" href="assets/img/top-section/top1.webp" as="image"> -->
 
   <!-- FIN METADATOS -->
 </head>
@@ -76,7 +76,7 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200px" height="800px">
+              <img src="assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" loading="lazy" width="1200px" height="800px">
             </div>
             <div class="carousel-item">
               <img src="assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" loading="lazy" width="1200px" height="800px">
