--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
   
   <!-- PRELOAD DE BOOTSTRAP -->
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
   <!-- PRELOAD DE ESTILOS -->
   <link rel="preload" href="css/styles.css" as="style">
   <!-- PRELOAD DE FUENTES -->
