--- a/pages/canto.html
+++ b/pages/canto.html
@@ -15,7 +15,10 @@
   <link rel="preload" href="../css/styles.css" as="style">
   <!-- PRELOAD DE FUENTES -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap" as="style">
-  
+ <!-- PRELOAD DE IMAGENES TOP-SECTION -->
+  <link rel="preload" href="../assets/img/top-section/top1.webp" as="image">
+  <link rel="preload" href="../assets/img/top-section/top2.webp" as="image">
+  <link rel="preload" href="../assets/img/top-section/top3.webp" as="image">
   
   <!-- ENLACE A BOOTSTRAP Y ESTILOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -72,13 +75,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" loading="lazy" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200px" height="800px">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" loading="lazy" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200px" height="800px">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" loading="lazy" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200px" height="800px">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -169,8 +172,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
-  <script src="assets/js/toogle.js"></script>
-  <script src="assets/js/lazyload.js"></script>
+  <script src="../assets/js/toogle.js"></script>
+  <script src="../assets/js/cookies.js"></script>
   <!-- FIN BODY -->
 </body>
 
