--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200px" height="800px">
+              <img src="assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200" height="800">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200px" height="800px">
+              <img src="assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200" height="800">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200px" height="800px">
+              <img src="assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200" height="800">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -114,8 +114,8 @@
       <section class="section2 fade-in">
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" loading="lazy" height="500px">
-            <img src="assets/img/index/j3.webp" alt="niña practicando piano" loading="lazy" height="500px">
+            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" loading="lazy" height="500">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano" loading="lazy" height="500">
           </div>
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
@@ -127,8 +127,8 @@
         </div>
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" loading="lazy" height="500px">
-            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" loading="lazy" height="500px">
+            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" loading="lazy" height="500">
+            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" loading="lazy" height="500">
           </div>
           <div class="divisor-texto">
             <h2>Instrumentos</h2>
@@ -161,7 +161,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
-                      alt="Card image cap profesora de piano" loading="lazy" width="432px">
+                      alt="Card image cap profesora de piano" loading="lazy" width="432">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
@@ -180,7 +180,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
-                      alt="Card image cap profesora de violin" loading="lazy" width="432px">
+                      alt="Card image cap profesora de violin" loading="lazy" width="432">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
@@ -199,7 +199,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
-                      alt="Card image cap profesora de canto" loading="lazy" width="432px">
+                      alt="Card image cap profesora de canto" loading="lazy" width="432">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
