--- a/pages/piano.html
+++ b/pages/piano.html
@@ -75,13 +75,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor" width="1200" height="800">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano" width="1200" height="800">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200px" height="800px">
+            <img src="../assets/img/top-section/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo" width="1200" height="800">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -106,7 +106,7 @@
           y progreso.
         </p>
         <div class="imagen1">
-          <img src="../assets/img/piano/1.webp" alt="teclas de piano" class="fade-in fade3" width="600px" height="400px">
+          <img src="../assets/img/piano/1.webp" alt="teclas de piano" class="fade-in fade3" width="600" height="400">
         </div>
       </section>
       <section class="section2 fade-in">
@@ -115,7 +115,7 @@
           Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
         </p>
         <div class="imagen2">
-          <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano" width="501px" height="500px">
+          <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano" width="501" height="500">
         </div>
       </section>
       <section class="section3 fade-in">
@@ -124,7 +124,7 @@
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
         <div class="imagen3">
-          <img src="../assets/img/piano/3.webp" alt="pianista global" loading="lazy" width="501px" height="500px">
+          <img src="../assets/img/piano/3.webp" alt="pianista global" loading="lazy" width="501" height="500">
         </div>
       </section>
 
@@ -137,7 +137,7 @@
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </h3>
         <div class="imagen3">
-        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" loading="lazy" width="432px">
+        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" loading="lazy" width="432">
         </div>
       </section>
     </div>
