--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <link rel="stylesheet" href="css/styles.css">
   
   <!-- TITULO DEL SITIO WEB -->
-  <title>MusicArte - Escuela de Música</title>
+  <title>MusicArte - Escuela de Música en Caballito, Buenos Aires</title>
   
   <!-- DESCRIPCION DEL SITIO WEB -->
-  <meta name="description" content="Escuela de enseñanza de instrumentos musicales">
+  <meta name="description" content="MusicArte - Escuela de Música en Caballito, Buenos Aires. Clases de piano, canto y violín para todas las edades y niveles impartidas por profesionales.">
 
   <!-- FIN METADATOS -->
 </head>
@@ -46,8 +46,8 @@
     <!-- MENU NAVEGACION BOOTSTRAP -->
     <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand logo" href="#">MusicArte</a>
-        <label class="navbar-brand logo-2"><a href="#">♪</a></label>
+        <a class="navbar-brand logo" href="#" aria-label="Abrir enlace a inicio">MusicArte</a>
+        <label class="navbar-brand logo-2"><a href="#" aria-label="Abrir enlace a inicio">♪</a></label>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <svg xmlns="http://www.w3.org/2000/svg" width="2.2rem" height="2.2rem" viewBox="0 0 20 20"><path fill="currentColor" fill-rule="evenodd" d="M3 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1" clip-rule="evenodd"/></svg>
@@ -55,10 +55,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link rounded-3" aria-current="page" href="#">Inicio</a>
-            <a class="nav-link rounded-3" href="pages/piano.html">Piano</a>
-            <a class="nav-link rounded-3" href="pages/canto.html">Canto</a>
-            <a class="nav-link rounded-3" href="pages/violin.html">Violín</a>
-            <a class="nav-link rounded-3" href="pages/contacto.html">Contacto</a>
+            <a class="nav-link rounded-3" href="pages/piano.html" aria-label="Abrir enlace a piano">Piano</a>
+            <a class="nav-link rounded-3" href="pages/canto.html" aria-label="Abrir enlace a canto">Canto</a>
+            <a class="nav-link rounded-3" href="pages/violin.html" aria-label="Abrir enlace a violín">Violín</a>
+            <a class="nav-link rounded-3" href="pages/contacto.html" aria-label="Abrir enlace a contacto">Contacto</a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/piano.html" class="link">Piano Elena Martínez</a>
+                    <a href="pages/piano.html" class="link" aria-label="Abrir enlace a piano">Piano Elena Martínez</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
@@ -176,7 +176,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                   <a href="pages/canto.html" class="link">Canto Laura Rivarola</a>
+                   <a href="pages/canto.html" class="link" aria-label="Abrir enlace a canto">Canto Laura Rivarola</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
@@ -195,7 +195,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <a href="pages/violin.html" class="link">Violín Analía Villalba</a>
+                    <a href="pages/violin.html" class="link" aria-label="Abrir enlace a violín">Violín Analía Villalba</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
@@ -257,9 +257,9 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
-  <script src="assets/js/toogle.js"></script>
-  <script src="assets/js/cookies.js"></script>
-  <script src="assets/js/lazyload.js"></script>
+  <script defer src="assets/js/toogle.js"></script>
+  <script defer src="assets/js/cookies.js"></script>
+  <script defer src="assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
