--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,10 +22,10 @@
   <link rel="stylesheet" href="../css/styles.css">
   
   <!-- TITULO DEL SITIO WEB -->
-  <title>MusicArte - Escuela de Música</title>
+  <title>MusicArte - Escuela de Música en Caballito, Buenos Aires</title>
   
   <!-- DESCRIPCION DEL SITIO WEB -->
-  <meta name="description" content="Escuela de enseñanza de instrumentos musicales">
+  <meta name="description" content="MusicArte - Escuela de Música en Caballito, Buenos Aires. Clases de piano, canto y violín para todas las edades y niveles impartidas por profesionales.">
 
   <!-- FIN METADATOS -->
 </head>
@@ -42,18 +42,18 @@
       <!-- MENU NAVEGACION BOOTSTRAP -->
     <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand logo" href="../index.html">MusicArte</a>
-        <label class="navbar-brand logo-2"><a href="../index.html">♪</a></label>
+        <a class="navbar-brand logo" href="../index.html" aria-label="Abrir enlace a inicio">MusicArte</a>
+        <label class="navbar-brand logo-2"><a href="../index.html" aria-label="Abrir enlace a inicio">♪</a></label>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <svg xmlns="http://www.w3.org/2000/svg" width="2.2rem" height="2.2rem" viewBox="0 0 20 20"><path fill="currentColor" fill-rule="evenodd" d="M3 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1" clip-rule="evenodd"/></svg>
       </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div  class="navbar-nav ms-auto">
-            <a class="nav-link rounded-3" href="../index.html">Inicio</a>
-            <a class="nav-link rounded-3" href="piano.html">Piano</a>
-            <a class="nav-link rounded-3" href="canto.html">Canto</a>
-            <a class="nav-link rounded-3" href="violin.html">Violín</a>
+            <a class="nav-link rounded-3" href="../index.html" aria-label="Abrir enlace a inicio">Inicio</a>
+            <a class="nav-link rounded-3" href="piano.html" aria-label="Abrir enlace a piano">Piano</a>
+            <a class="nav-link rounded-3" href="canto.html" aria-label="Abrir enlace a canto">Canto</a>
+            <a class="nav-link rounded-3" href="violin.html" aria-label="Abrir enlace a violín">Violín</a>
             <a class="nav-link rounded-3" aria-current="page" href="#">Contacto</a>
           </div>
         </div>
@@ -190,8 +190,9 @@
   <!-- SCRIPT DE BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
-  <script src="../assets/js/toogle.js"></script>
-  <script src="../assets/js/cookies.js"></script>
+  <script defer src="assets/js/toogle.js"></script>
+  <script defer src="assets/js/cookies.js"></script>
+  <script defer src="assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
