--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -191,9 +191,9 @@
   <!-- SCRIPT DE BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
-  <script defer src="../assets/js/toogle.js"></script>
-  <script defer src="../assets/js/cookies.js"></script>
-  <script defer src="../assets/js/lazyload.js"></script>
+  <script src="../assets/js/toogle.js"></script>
+  <script src="../assets/js/cookies.js"></script>
+  <script src="../assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
