--- a/pages/piano.html
+++ b/pages/piano.html
@@ -29,7 +29,7 @@
   
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="MusicArte - Escuela de Música en Caballito, Buenos Aires. Clases de piano, canto y violín para todas las edades y niveles impartidas por profesionales.">
-  
+  <meta name="keywords" content="MusicArte, escuela de música, Caballito, Buenos Aires, piano, canto, violín, clases, profesionales, música, niños, adultos, enseñanza, profesores calificados">
   <!-- FIN METADATOS -->
 </head>
 
